[project]
name = "graphs_usedt54"
version = "0.1.0"
description = "Python library for graph algorithms, including Dijkstra's shortest path"
authors = [{name="Adam Long", email="along48@msudenver.edu"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
